# vendorhawk

./: .env.example  .gitignore  API_SPECIFICATION.md  ARCHITECTURE.md  DESIGN.md  PHASE1_SETUP.md  PHASE2_IMPLEMENTATION.md  PHASE3_IMPLEMENTATION.md  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_04_08_1200_001_initial_schema.py
app/: __init__.py  config.py  main.py
app/api/: __init__.py  admin.py  factories.py  invoices.py  negotiations.py  vendors.py
app/models/: __init__.py  commodity_price.py  factory.py  invoice.py  negotiation.py  negotiation_vendor_message.py  vendor.py
app/schemas/: __init__.py  invoice.py
app/services/: __init__.py  invoice_processor.py  negotiation_engine.py  price_intelligence.py  vendor_selector.py
app/utils/: __init__.py  ai_client.py  database.py  logger.py  ocr_client.py  validators.py
tests/: seed_data.py  test_phase2.py  test_phase3.py
